--- a/config.json
+++ b/config.json
@@ -12,6 +12,5 @@
     },
     "server_port": 5000,
     "app_secret_key_variable": "app_secret_key",
-    "enable_password_hashing": true,
-    "enable_multi_projects": false
+    "enable_password_hashing": true
 }
